chnaged to ldapts

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "genkit": "^1.13.0",
-    "ldapjs": "^2.3.3",
+    "ldapts": "^8.0.5",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.8.0",
     "mysql2": "^3.10.2",
@@ -63,7 +63,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/ldapjs": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
