--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "3.614.0",
+    "@aws-sdk/client-resource-groups-tagging-api": "3.614.0",
     "@aws-sdk/client-s3": "3.614.0",
     "@aws-sdk/s3-request-presigner": "3.614.0",
     "@genkit-ai/googleai": "^1.13.0",
