--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "embla-carousel-react": "^8.6.0",
     "genkit": "^1.13.0",
     "ldapts": "^8.0.5",
-    "lucide-react": "^0.475.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mysql2": "^3.10.2",
     "next": "15.3.3",
@@ -65,6 +65,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -75,3 +76,5 @@
     "typescript": "^5"
   }
 }
+
+    
