--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "genkit": "^1.13.0",
     "ldapts": "^8.0.5",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.408.0",
     "mongodb": "^6.8.0",
     "mysql2": "^3.10.2",
     "next": "15.3.3",
@@ -76,5 +77,3 @@
     "typescript": "^5"
   }
 }
-
-    
